--- a/07_Ansible/01_Development/2-ide.ansible.yml
+++ b/07_Ansible/01_Development/2-ide.ansible.yml
@@ -48,4 +48,6 @@
       code --install-extension ms-vscode-remote.remote-containers
       code --install-extension ms-kubernetes-tools.vscode-kubernetes-tools
       code --install-extension mtxr.sqltools
+      code --install-extension qwtel.sqlite-viewer
+      code --install-extension mikestead.dotenv
 
