--- a/07_Ansible/02_K8s/1-k8s-rocky-common.yml
+++ b/07_Ansible/02_K8s/1-k8s-rocky-common.yml
@@ -20,6 +20,7 @@
         - net-tools   
         - telnet
         - python3-dnf-plugin-versionlock
+        - yum-utils
       state: present
 
   - name: clean cache
@@ -35,6 +36,18 @@
        - docker-ce
        - docker-ce-cli
        - containerd.io
+       - docker-latest-logrotate
+       - docker-logrotate
+       - docker-engine
+       - docker-client
+       - docker-client-latest
+       - docker-common
+       - container-tools
+       - atomic-registries
+       - containers-common
+       - podman
+       - skopeo
+       - buildah
       state: absent   
 
   - name: clean up
@@ -52,19 +65,17 @@
       path: /etc/sysctl.conf
       line: net.ipv4.ip_forward=1
 
-  - name: add a software source
+  - name: Set up Docker repository
     shell: |
       yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 
-
-  - name: install Docker version
-    # yum list available | grep docker
-    yum: 
-      name: 
-        - docker-ce-20.10.22
-        - docker-ce-cli-20.10.22
-        - containerd.io
-      state: present
+  - name: Install Docker Engine and containerd
+    # yum list available | grep docker-ce
+    yum:
+      name:
+      - docker-ce-24.0.5
+      - docker-ce-cli-24.0.5
+      - containerd.io
 
   - name: configure Docker 1
     file:
@@ -123,9 +134,9 @@
   - name: install k8s
     yum: 
       name: 
-        - kubelet-1.20.0
-        - kubeadm-1.20.0
-        - kubectl-1.20.0
+        - kubelet-1.23.4
+        - kubeadm-1.23.4
+        - kubectl-1.23.4
       state: present
 
   - name: download K8S initial mirror
