--- a/07_Ansible/02_K8s/03_Rocky_9.0/1-k8s-rocky9.0-common.yml
+++ b/07_Ansible/02_K8s/03_Rocky_9.0/1-k8s-rocky9.0-common.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: k8s-all
+- hosts: all
   become: yes
   remote_user: root
   tasks:
@@ -36,10 +36,6 @@
       path: /etc/sysctl.conf
       line: net.ipv4.ip_forward=1
 
-  - name: Reload Kernel parameter configuration
-    shell: |
-      sysctl --system
-
   - name: disable swap
     shell: |
       swapoff -a
@@ -52,6 +48,7 @@
   - name: prerequisites
     dnf: 
       name: 
+        - dnf-command(versionlock)
         - containerd.io
       state: present 
 
@@ -66,6 +63,48 @@
      regexp: '^systemd_cgroup='
      line: systemd_cgroup = true
 
+
   - name: Enable and start Containerd service
     shell: |
       systemctl enable --now containerd.service
+
+  - name: add the Kubernetes Official Yum Repository
+    copy: 
+      dest: /etc/yum.repos.d/kubernetes.repo
+      content: |
+          [kubernetes]
+          name=Kubernetes
+          baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
+          enabled=1
+          gpgcheck=1
+          repo_gpgcheck=1
+          gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
+
+  - name: install k8s
+    dnf: 
+      name: 
+        - kubelet-1.24.0
+        - kubeadm-1.24.0
+        - kubectl-1.24.0
+      state: present
+
+  - name: Enable and start kubelet.service
+    shell: |
+      systemctl enable --now kubelet.service
+
+
+  - name: Enable Bash Completion for Kubernetes Commands
+    shell: |
+      source <(kubectl completion bash)
+      kubectl completion bash > /etc/bash_completion.d/kubectl
+
+
+  - name: Reload Kernel parameter configuration
+    shell: |
+      sysctl --system
+
+
+  - name: lock version for k8s binaries and dependencies 
+    shell: |
+      dnf versionlock kubelet kubeadm kubectl docker-ce docker-ce-cli containerd.io
