--- a/07_Ansible/02_K8s/03_Rocky_9.0/1-k8s-rocky9.0-common.yml
+++ b/07_Ansible/02_K8s/03_Rocky_9.0/1-k8s-rocky9.0-common.yml
@@ -21,6 +21,11 @@
       systemctl stop firewalld
       systemctl disable firewalld
 
+  - name: clean cache
+    shell: |
+      dnf clean all
+      rm -rf /var/cache/yum/*
+
   - name: Loading K8s required Kernel Module overlay
     community.general.modprobe:
       name: overlay
@@ -45,10 +50,38 @@
     shell: |
       dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 
+
+  - name: uninstall previous
+    dnf: 
+      name:
+        - kubelet
+        - kubeadm
+        - kubectl
+        - containerd.io
+        - docker-ce
+        - docker-ce-cli
+        - podman
+        - skopeo
+        - buildah
+        - container-tools
+        - atomic-registries
+        - containers-common
+      state: absent   
+
+
+  - name: clean up
+    file:
+      path: /var/lib/docker
+      state: absent
+
+
   - name: prerequisites
     dnf: 
       name: 
         - dnf-command(versionlock)
+        - dnf-utils
+        - docker-ce-20.10.22
+        - docker-ce-cli-20.10.22
         - containerd.io
       state: present 
 
@@ -89,6 +122,11 @@
         - kubectl-1.24.0
       state: present
 
+  - name: download K8S initial mirror
+    shell: |
+      kubeadm config images pull
+
+
   - name: Enable and start kubelet.service
     shell: |
       systemctl enable --now kubelet.service
@@ -98,6 +136,14 @@
     shell: |
       source <(kubectl completion bash)
       kubectl completion bash > /etc/bash_completion.d/kubectl
+
+
+  - name: IP tables optimizations
+    copy: 
+      dest: /etc/sysctl.d/k8s.conf  
+      content: |
+          net.bridge.bridge-nf-call-ip6tables = 1  
+          net.bridge.bridge-nf-call-iptables = 1  
 
 
   - name: Reload Kernel parameter configuration
