--- a/07_Ansible/02_K8s/04_Ubuntu_2204/1-k8s-ubuntu-common.yml
+++ b/07_Ansible/02_K8s/04_Ubuntu_2204/1-k8s-ubuntu-common.yml
@@ -49,13 +49,13 @@
       swapoff -a
       sed -i 's/.*swap.*/#&/' /etc/fstab #   
 
-  - name: uninstall the installed Docker
-    apt: 
-      name:
-       - docker-ce
-       - docker-ce-cli
-       - containerd.io
-      state: absent   
+  # - name: uninstall the installed Docker
+  #   apt: 
+  #     name:
+  #      - docker-ce
+  #      - docker-ce-cli
+  #      - containerd.io
+  #     state: absent   
 
   - name: configurations
     shell: |
@@ -63,8 +63,37 @@
       modprobe br_netfilter
       sysctl --system
 
-  - name: add software source
-    shell: |
-      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmour -o /etc/apt/trusted.gpg.d/docker.gpg
-      add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - name: Add Docker GPG apt Key
+    apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
  
+  - name: add Docker software source
+    apt_repository:
+     repo: deb https://download.docker.com/linux/ubuntu jammy stable
+     state: present
+
+  - name: containerd install
+    apt:
+      name:
+        - containerd.io
+      state: present
+
+  - name: containerd enable 
+    shell: |
+      systemctl restart containerd
+      systemctl enable containerd
+      containerd config default | tee /etc/containerd/config.toml >/dev/null 2>&1
+      sed -i 's/SystemdCgroup \= false/SystemdCgroup \= true/g' /etc/containerd/config.toml
+
+  - name: add K8s key and repo
+    shell: |
+        curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.26/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg --yes
+        echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.26/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
+
+
+  - name: install K8s
+    shell: |
+          sudo apt-get update
+          sudo apt-get install -y kubelet=1.26.8-1.1 kubeadm=1.26.8-1.1 kubectl=1.26.8-1.1
+          sudo apt-mark hold kubelet kubeadm kubectl
