ubuntu playbook specialized files

--- a/07_Ansible/02_K8s/02_Ubuntu_2204/1-k8s-ubuntu-common.yml
+++ b/07_Ansible/02_K8s/02_Ubuntu_2204/1-k8s-ubuntu-common.yml
@@ -49,13 +49,13 @@
       swapoff -a
       sed -i 's/.*swap.*/#&/' /etc/fstab #   
 
-  # - name: uninstall the installed Docker
-  #   apt: 
-  #     name:
-  #      - docker-ce
-  #      - docker-ce-cli
-  #      - containerd.io
-  #     state: absent   
+  - name: uninstall the installed Docker
+    apt: 
+      name:
+       - docker-ce
+       - docker-ce-cli
+       - containerd.io
+      state: absent   
 
   - name: configurations
     shell: |
